Split out barcode scanner into new component.

--- a/src/homarr-shopping/src/app/app.component.html
+++ b/src/homarr-shopping/src/app/app.component.html
@@ -5,24 +5,10 @@
     </a>
   </nav>
 
-  <section id="main" style="padding-top: 54px">
+  <section id="main" style="padding-top: 69px">
     <div class="row">
       <div class="col-md-6">
-
-        <div id="quagga">
-        </div>
-
-      </div>
-      <div class="col-md-6">
-
-        <input type="text" #barcode (keyup)="addItem(barcode.value)">
-
-        Barcodes
-        <ul>
-          <li *ngFor="let barcode of barcodes">
-            {{barcode | json}}
-          </li>
-        </ul>
+        <barcode-scanner></barcode-scanner>
       </div>
     </div>
   </section>
