Adding some basic Firebase integration

--- a/src/homarr-shopping/src/app/app.component.html
+++ b/src/homarr-shopping/src/app/app.component.html
@@ -8,6 +8,12 @@
   <section id="main" style="padding-top: 69px">
     <div class="row">
       <div class="col-md-6">
+        <h4>Items</h4>
+        <item-list></item-list>
+      </div>
+
+      <div class="col-md-6">
+        <h4>Add Item</h4>
         <barcode-scanner></barcode-scanner>
       </div>
     </div>
