Anonymous auth doesn't like dev mode...

--- a/src/homarr-shopping/src/app/app.component.html
+++ b/src/homarr-shopping/src/app/app.component.html
@@ -14,7 +14,7 @@
 
       <div class="col-md-6">
         <h4>Add Item</h4>
-        <barcode-scanner></barcode-scanner>
+        <add-item></add-item>
       </div>
     </div>
   </section>
