--- a/src/homarr-shopping/src/app/items/add-item.component.html
+++ b/src/homarr-shopping/src/app/items/add-item.component.html
@@ -5,7 +5,7 @@
     <label class="col-form-label col-md-3">Name</label>
 
     <div class="col-md-9">
-        <input class="form-control" type="text" />
+        <input class="form-control" type="text" name="name" [(ngModel)]="item.name" />
     </div>
 </div>
 
@@ -15,4 +15,13 @@
     <div class="col-md-9">
         <input class="form-control" type="text" />
     </div>
+</div>
+
+<div class="form-group-row">
+
+    {{item | json}}
+
+
+    <button class="btn btn-danger">Cancel</button>
+    <button class="btn btn-success" (click)="addItem()">Add Item</button>
 </div>
