Adding manual barcode entry. Lookup based on barcode. Added barcode to item.

--- a/src/homarr-shopping/src/app/app.component.html
+++ b/src/homarr-shopping/src/app/app.component.html
@@ -13,8 +13,8 @@
       </div>
 
       <div class="col-md-6">
-        <h4>Add Item</h4>
-        <add-item></add-item>
+        <h4>Lookup Item</h4>
+        <item-lookup></item-lookup>
       </div>
     </div>
   </section>
