--- a/src/homarr-shopping/src/app/items/item-list.component.html
+++ b/src/homarr-shopping/src/app/items/item-list.component.html
@@ -1,3 +1,7 @@
-<div *ngFor="let item of items | async">
-    {{item | json}}
+<div class="card-deck-wrapper">
+    <div class="card-deck">
+        <div class="card" *ngFor="let item of items | async">
+            {{item | json}}
+        </div>
+    </div>
 </div>
