--- a/src/homarr-shopping/src/app/shared/barcode-scanner.component.html
+++ b/src/homarr-shopping/src/app/shared/barcode-scanner.component.html
@@ -11,6 +11,7 @@
     </div>
 </div>
 <div class="form-group row" [hidden]="!isScanning" style="text-align: center">
-    <div id="quagga">
+    <div class="col-md-12">
+        <div id="quagga" class="col-md-12"></div>
     </div>
 </div>
