Initial work on picture uploading.

--- a/src/homarr-shopping/src/app/items/add-item.component.html
+++ b/src/homarr-shopping/src/app/items/add-item.component.html
@@ -10,8 +10,8 @@
 <div class="form-group row">
     <label class="col-form-label col-md-3">Picture</label>
 
-    <div class="col-md-9">
-        <input class="form-control" type="text" />
+    <div class="col-md-9">        
+        <image-upload></image-upload>
     </div>
 </div>
 
