Image upload works but isn't really linked to anything...

--- a/src/homarr-shopping/src/app/shared/image-upload/image-upload.component.html
+++ b/src/homarr-shopping/src/app/shared/image-upload/image-upload.component.html
@@ -7,11 +7,9 @@
 
     </div>
 
-    <div class="col-md-12">
+    <div class="col-md-12" *ngIf="isImageUploadComplete">
 
-        Preview
-
-        TBC
+        <img [src]="imageUrl" />
 
     </div>
 
