Images now attached to items. Images displayed in the item list (needs work...).

--- a/src/homarr-shopping/src/app/items/add-item.component.html
+++ b/src/homarr-shopping/src/app/items/add-item.component.html
@@ -11,7 +11,7 @@
     <label class="col-form-label col-md-3">Picture</label>
 
     <div class="col-md-9">        
-        <image-upload></image-upload>
+        <image-upload (onImageUploaded)="onImageUploaded($event)"></image-upload>
     </div>
 </div>
 
