--- a/src/homarr-shopping/src/app/items/item-list.component.html
+++ b/src/homarr-shopping/src/app/items/item-list.component.html
@@ -1,7 +1,5 @@
 <div class="card-deck-wrapper">
     <div class="card-deck">
-        <div class="card" *ngFor="let item of items | async">
-            {{item | json}}
-        </div>
+        <item-card [item]="item" *ngFor="let item of items | async"></item-card>
     </div>
 </div>
