--- a/src/homarr-shopping/src/app/shared/image-upload/image-upload.component.html
+++ b/src/homarr-shopping/src/app/shared/image-upload/image-upload.component.html
@@ -2,15 +2,11 @@
 <div class="row">
 
     <div class="col-md-12">
-
         <input type="file" class="form-control" #file />
-
     </div>
 
     <div class="col-md-12" *ngIf="isImageUploadComplete">
-
-        <img [src]="imageUrl" />
-
+        <img [src]="imageUrl | async" />
     </div>
 
 </div>
