Improving barcode scanning

--- a/src/homarr-shopping/src/app/app.component.html
+++ b/src/homarr-shopping/src/app/app.component.html
@@ -5,16 +5,36 @@
     </a>
   </nav>
 
-  <section id="main" style="padding-top: 69px">
+  <section id="main" style="padding-top: 54px">
     <div class="row">
       <div class="col-md-6">
-        <h4>Items</h4>
-        <item-list></item-list>
+        <!--<div class="row homarr-big-nav">
+          <div class="col-md-4 homarr-big-nav-item" style="background-color: #F44336;" title="Lookup">
+            <div>
+              <i class="fa fa-search fa-5x"></i>
+            </div>
+          </div>
+          <div class="col-md-4 homarr-big-nav-item" style="background-color: #2196F3;" title="Groceries">
+            <div>
+              <i class="fa fa-shopping-cart fa-5x"></i>
+            </div>
+          </div>
+          <div class="col-md-4 homarr-big-nav-item" style="background-color: #8BC34A;" title="Other">
+            <div>
+              <i class="fa fa-book fa-5x"></i>
+            </div>
+          </div>
+        </div>-->
+
+
+
+        <h4>Lookup Item</h4>
+        <item-lookup></item-lookup>
       </div>
 
       <div class="col-md-6">
-        <h4>Lookup Item</h4>
-        <item-lookup></item-lookup>
+        <h4>Items</h4>
+        <item-list></item-list>
       </div>
     </div>
   </section>
