--- a/src/homarr-shopping/src/app/items/item-card.component.html
+++ b/src/homarr-shopping/src/app/items/item-card.component.html
@@ -1,8 +1,8 @@
 
-<div class="card">    
+<!--<div class="card">    -->
     <img class="card-img-top" [src]="itemPictureUrl | async" />
     <div class="card-block">
         <h4 class="card-title">{{item.name}}</h4>
         <p class="card-text"><small class="text-muted">{{item.barcode}}</small></p>
     </div>
-</div>
+<!--</div>-->
