--- a/src/homarr-shopping/src/app/app.component.scss
+++ b/src/homarr-shopping/src/app/app.component.scss
@@ -35,7 +35,7 @@
     animation: all 1000ms cubic-bezier();
 
     #homarr-sheet-right-overlay {
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.1);
         height: 100%;
     }
 
@@ -43,16 +43,26 @@
         height: 100%;
         background-color: white;
         padding-left: 0;
+        box-shadow: 0 0 2px 2px #ccc;
 
         .homarr-sheet-header {
             background-color: red;
             color: white;
             padding: 24px;
+            box-shadow: 0 3px 3px #ccc;
 
-            .homarr-sheet-return-button {
-                padding-right: 24px;
-                cursor: pointer;
+            .homarr-sheet-title {
+
+                margin-bottom: 0;
+                font-weight: normal;
+                font-size: 24px;
+
+                .homarr-sheet-return-button {
+                    padding-right: 24px;
+                    cursor: pointer;
+                }
             }
+
         }
 
         .homarr-sheet-body {
