Upgrade and material and zxing

--- a/src/homarr-shopping/src/app/app.component.html
+++ b/src/homarr-shopping/src/app/app.component.html
@@ -1,44 +1,31 @@
-<div class="container-fluid">
-  <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-    <a class="navbar-brand homarr-logo" href="#">
-      [h]
-    </a>
-    <ul class="nav navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Inventory</a>
-      </li>      
-    </ul>
-  </nav>
 
-  <section id="main" style="padding-top: 69px">
-    <div class="row">
-      <div class="col-md-12">
-        <item-list></item-list>
-      </div>
-    </div>
-
-    <div class="homarr-fab" (click)="showAdd = !showAdd">
-      <i class="material-icons">add</i>
-    </div>
+  <mat-toolbar color="primary" style="position: fixed; top: 0; width: 100%;">
+    <span>[h]</span>
     
-    <div id="homarr-sheet-right" class="row" *ngIf="showAdd" [@fadeInOut]="showAdd">
-      <div id="homarr-sheet-right-overlay" class="hidden-sm-down col-md-7">        
+    <a class="nav-link" href="#">Inventory</a>
+  </mat-toolbar>
+
+  <div style="padding-top: 64px; height: 100%;">
+  <mat-sidenav-container style="height: 100%">
+    <mat-sidenav-content>
+      <item-list></item-list>
+      
+      <button mat-fab class="homarr-fab" (click)="sidenav.toggle()">
+        <mat-icon>add</mat-icon>
+      </button>
+    </mat-sidenav-content>
+
+    <mat-sidenav #sidenav mode="over" position="end" fixedInViewport style="width: 400px">
+      <div class="homarr-sheet-header">
+        <h4 class="homarr-sheet-title">
+          <mat-icon (click)="sidenav.toggle()">keyboard_backspace</mat-icon>
+          Add Item
+        </h4>
       </div>
-
-      <div id="homarr-sheet-right-content" class="col-sm-12 col-md-5">
-        <div class="homarr-sheet-header">
-          <h4 class="homarr-sheet-title">
-            <i class="homarr-sheet-return-button material-icons" (click)="showAdd = !showAdd">keyboard_backspace</i>
-            Add Item
-          </h4>
-        </div>
-        <div class="homarr-sheet-body">
-          <item-lookup></item-lookup>
-        </div>
+      <div class="homarr-sheet-body">
+        <item-lookup></item-lookup>
       </div>
-    </div>
+    </mat-sidenav>
 
-
-  </section>
-
+  </mat-sidenav-container>
 </div>
