--- a/src/homarr-shopping/src/app/items/add-item.component.html
+++ b/src/homarr-shopping/src/app/items/add-item.component.html
@@ -1,35 +1,35 @@
 
-<div class="form-group row">
-    <div class="col-md-12">
-        <span class="homarr-input-group input-group">
-            <input class="form-control homarr-input" required type="text" name="type" [(ngModel)]="item.type" />
-            <label>Type</label>
-        </span>
+<style>
+
+.form {
+    display: flex;
+    flex-direction: column;
+    padding: 12px;
+}
+
+.form mat-form-field,
+.form image-upload,
+.form button,
+.form div {
+    flex: 0 0 auto;
+}
+
+</style>
+
+<div class="form">
+    <mat-form-field>
+        <input matInput type="text" placeholder="Type" [(ngModel)]="item.type" />
+    </mat-form-field>
+
+    <mat-form-field>
+        <input matInput type="text" placeholder="Name" [(ngModel)]="item.name" />
+    </mat-form-field>
+    
+    <image-upload (onImageUploaded)="onImageUploaded($event)"></image-upload>
+
+    <div>        
+        {{item | json}}
     </div>
+    
+    <button mat-raised-button color="primary" (click)="addItem()">Add Item</button>
 </div>
-
-<div class="form-group row">
-    <div class="col-md-12">
-        <span class="homarr-input-group input-group">
-            <input class="form-control homarr-input" required type="text" name="name" [(ngModel)]="item.name" />
-            <label>Name</label>
-        </span>
-    </div>
-</div>
-
-<div class="form-group row">
-    <label class="col-form-label col-md-3">Picture</label>
-
-    <div class="col-md-9">        
-        <image-upload (onImageUploaded)="onImageUploaded($event)"></image-upload>
-    </div>
-</div>
-
-<div class="form-group-row">
-
-    {{item | json}}
-
-
-    <button class="btn btn-danger">Cancel</button>
-    <button class="btn btn-success" (click)="addItem()">Add Item</button>
-</div> 
