--- a/src/homarr-shopping/src/app/shared/barcode-scanner.component.html
+++ b/src/homarr-shopping/src/app/shared/barcode-scanner.component.html
@@ -1,16 +1,24 @@
-<div class="form-group row">
-    <div class="col-md-12">
-        <span class="homarr-input-group input-group">
-            <input class="form-control homarr-input" required type="text" #barcode>
-            <label>Barcode</label>
-            <span class="input-group-btn">
-                <button #scanBtn class="btn btn-default homarr-button"><i class="fa fa-barcode"></i> Scan</button>
-            </span>
-        </span>
-    </div>
-</div>
-<div class="form-group row" [hidden]="!isScanning" style="text-align: center">
-    <div class="col-md-12">
-        <div id="quagga" class="col-md-12"></div>
+<div style="display: flex; flex-direction: column; padding: 12px">
+
+    <mat-form-field style="flex: 1 1 auto">
+        <input matInput type="text" placeholder="Barcode" #barcode />
+        <i matSuffix #scanBtn class="fa fa-barcode"></i>
+    </mat-form-field>
+
+    <div style="text-align: center" *ngIf="isScanning">
+        <mat-form-field>
+            <mat-label>Device</mat-label>
+            <mat-select [(value)]="chosenDevice">
+                <mat-option *ngFor="let device of devices" [value]="device">
+                {{device.label}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <zxing-scanner [formats]="['QR_CODE', 'EAN_13', 'CODE_128']" 
+            [device]="chosenDevice" 
+            (camerasFound)="onCamerasFound($event)" 
+            (scanSuccess)="handleDetection($event)" 
+            (scanComplete)="logEvent($event);">
+        </zxing-scanner>
     </div>
 </div>
